--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,9 +3,13 @@
 -
   type: github
   icon: 'fab fa-github'
+#-
+#  type: twitter
+#  icon: 'fab fa-twitter'
 -
-  type: twitter
-  icon: 'fab fa-twitter'
+  type: mastodon
+  icon: 'fab fa-mastodon'
+  url:  'https://social.bau-ha.us/@Hancoki'
 -
   type: email
   icon: 'fas fa-envelope'
